--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -10,3 +10,19 @@
 a:hover{
 	cursor: pointer;
 }
+
+.footer {
+    /*position: absolute;*/
+    bottom: 0;
+    width: 100%;
+    height: 60px;
+    /*background-color: #f5f5f5;*/
+}
+
+.footer a {
+    float: right;
+    padding: 3px;
+    background-color: #DDDDDD;
+    border-radius: 5px;
+    border: 1px solid;
+}
