--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -19,10 +19,17 @@
 .well {
 	min-height: 100px;
 }
+.map-well{
+	 min-height: 200px;
+}
 #map {
-height: 100%;
-width: 100%;
-/*position: relative;*/
+	/*height: 100%;
+	width: 100%;*/
+	 height: 300px;
+	 width: 100%;
+	 margin-top: 20px;
+	 margin-bottom: 20px;
+	/*position: relative;*/
 }
 a:hover{
 	cursor: pointer;
