updated videos page

--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -123,7 +123,7 @@ h2, h3, span {
 	color: white;
 }
 
-section#video-list,
+section.video-list,
 section#ingredients-list,
 section#recipe-list {
     min-height: 100px;
