fixed problem of videos playing after going back to recipe shortlist also fixed problem of shortlist still displaying on logout

--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -15,6 +15,17 @@
 	float: left;
 	min-height: 100px;
 }
+.star {
+     text-indent: -5000px;
+     display: block;
+     background: transparent url(assets/images/star.png);
+     height: 10px;
+     width: 10px;
+}
+
+.star.favorited {
+     background-position: 0;
+}
 #close-map {
 	float:right ;
 	margin: auto;
