--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -32,6 +32,10 @@
 }
 #open-map {
 	margin: center;
+	height: 60px;
+	width: 160px;
+	float: right;
+	font-size: 35px;
 }
 #userName {
 	float: right;
