--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -27,13 +27,14 @@
      background-position: 0;
 }
 #recipe-details{
-	height: 500px;
+	min-height: 500px;
 	overflow: scroll;
 	padding: 10px;
 }
 #selected-recipe-image{
-	height: 100px;
-	width: 100px;
+	height: 80px;
+	width: 80px;
+	margin: 0 auto;
 
 }
 #close-map {
