--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -212,6 +212,11 @@ section#recipe-list {
 
 }
 
+.selected-recipe-image {
+	max-width: 600px;
+	max-height: 600px;
+}
+
 @media only screen and (max-width: 980px) {
 	#login-text {
 		height: 30px;
