--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -207,8 +207,8 @@ section#recipe-list {
 	height: 60px;
 }
 #expand-video-panel{
-	height: 100%;
-	width: 100%;
+	height: 600px;
+	width: 800px;
 
 }
 
