tidied up old files and directory structure and file locations

--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -4,7 +4,7 @@ h1 img{
 }
 
 body {
-	background-image: url("background.jpg");
+	background-image: url("../images/background.jpg");
 	background-size: 100%;
 	background-attachment: fixed;
 }
